--- a/src/app/components/home/contact/contact.component.html
+++ b/src/app/components/home/contact/contact.component.html
@@ -12,7 +12,7 @@
                 profile letter with basic information about a person.
             </p>
             <div class="mt-5">
-                <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "contact", "email")' href="mailto:thanhtuanle939@gmail.com" target="_blank" class="main-btn" data-aos="fade-up"
+                <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "contact", "email")' href="mailto:prashantsaransingh@gmail.com" target="_blank" class="main-btn" data-aos="fade-up"
                     data-aos-duration="1000">
                     Say Hello
                 </a>
