--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -2,28 +2,28 @@
     <div [@animateFooter]>
         <ul class="footer-left-bar d-none d-md-block">
             <li>
-                <a href="https://github.com/lethanhtuan939" target='_blank'>
+                <a href="https://github.com/prashantsaran" target='_blank'>
                     <i class="fab fa-github"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/thanhtuan-le" target='_blank'>
+                <a href="https://www.linkedin.com/in/prashant-saran-singh-867a791b9" target='_blank'>
                     <i class="fab fa-linkedin-in"></i>
                 </a>
             </li>
         </ul>
         <div class="footer-right-bar d-none d-md-block">
-            <a href="mailto:thanhtuanle939@gmail.com" target='_blank'>prashantsaransingh@gmail.com </a>
+            <a href="mailto:prashantsaransingh@gmail.com" target='_blank'>prashantsaransingh </a>
         </div>
     </div>
 
     <div class="footer-credits text-center">
-        <a href="https://github.com/lethanhtuan939" target="_blank" rel="nofollow noopener noreferrer">
+        <a href="https://github.com/prashantsaran" target="_blank" rel="nofollow noopener noreferrer">
             <div>Built with Angular by Prashant Saran Singh</div>
         </a>
-        <a href="https://github.com/andresjosehr/andresjosehr-portfolio" target="_blank" rel="nofollow noopener noreferrer">
+        <!-- <a href="https://github.com/andresjosehr/andresjosehr-portfolio" target="_blank" rel="nofollow noopener noreferrer">
             <div class="mt-2">Designed by Brittany Chiang & Jośe Andreś</div>
-        </a>
+        </a> -->
     </div>
 
 </footer>
